syntax = "proto3";

// Eliminamos el paquete para que el servicio se llame "Notificador" a secas (igual que en Java)
option go_package = "./proto";

service Notificador {
  rpc EnviarNotificacion (MatchRequest) returns (NotificacionResponse);
}

// Alineado con la definición de Java (Métricas)
message MatchRequest {
  int64 orden_id = 1;
  int64 ts_engine_match = 2;
  int64 ts_api_salida = 3;
  int64 ts_api_recepcion = 4;
}

message NotificacionResponse {
  bool exito = 1;     // Corregido: Java espera bool en 1
  string mensaje = 2; // Corregido: Java espera string en 2
}